--- a/src/app/components/searchbar/searchbar.component.html
+++ b/src/app/components/searchbar/searchbar.component.html
@@ -1,7 +1,7 @@
-<div class="row searchbar">
-  <div class="col-md-6">
+<div class="row searchbar mb-2">
+  <div class="col-md-6 search">
     <span class="p-input-icon-right">
-      <input pInputText type="text" />
+      <input class="ps-3" pInputText type="text" />
       <i class="fa fa-search" aria-hidden="true"></i>
     </span>
   </div>
