--- a/src/app/features/post-login/issue-list/issue-list.component.html
+++ b/src/app/features/post-login/issue-list/issue-list.component.html
@@ -12,7 +12,7 @@
     [paginator]="true"
     currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
     [filterDelay]="0"
-    [globalFilterFields]="['docName', 'inspectorNum']"
+    [globalFilterFields]="['name', 'school', 'role']"
   >
     <ng-template pTemplate="caption">
       <div class="table-header">
