--- a/src/app/features/post-login/issue-list/update-issue/update-issue.component.scss
+++ b/src/app/features/post-login/issue-list/update-issue/update-issue.component.scss
@@ -1,4 +1,25 @@
 @import "../../../../../assets/scss/base";
+.p-button {
+    background-color: $primary;
+    border-radius: 8px;
+    border: solid 1px $primary;
+    transition: all 0.5s ease;
+    &:hover {
+        background-color: $primary-hover;
+        border-color: $primary-hover;
+    }
+}
+.no-gutter-row {
+    margin-right: 0;
+    margin-left: 0;
+}
+.col {
+    margin: 0;
+}
+input,
+textarea {
+    border-radius: 8px;
+}
 .issue-content {
     font-size: 16px;
 }
@@ -14,7 +35,15 @@
             font-size: 40px;
         }
     }
+    .trash-icon {
+        color: rgb(255, 86, 86);
+        font-size: 25px;
+        transition: all 0.5s ease;
 
+        &:hover {
+            color: rgb(240, 136, 136);
+        }
+    }
     // .index {
     //     color: $primary;
     //     font-size: 30px;
@@ -29,15 +58,12 @@
                 color: #fff;
             }
         }
-        i {
-            color: #fff;
-        }
         // .index {
         //     color: #fff;
         // }
     }
     .scrollview-item-content {
-        width: 200px;
+        width: 300px;
         font-size: 16px;
         .font-weight-bold {
             font-weight: bold;
@@ -73,4 +99,44 @@
 }
 .p-tag {
     padding: 20px;
+}
+.bottom-item {
+    button {
+        background-color: $primary;
+        border-radius: 8px;
+        transition: all 0.5s ease;
+        &:hover {
+            background-color: $primary-hover;
+            border-color: $primary-hover;
+        }
+        &.cancel {
+            background-color: white;
+            color: $primary;
+            border: $primary 1px solid;
+            &:hover {
+                background-color: $primary-hover;
+                border-color: $primary-hover;
+                color: #fff;
+            }
+        }
+    }
+}
+.update-icon {
+    i {
+        color: $primary;
+        font-size: 20px;
+    }
+}
+:host ::ng-deep {
+    .p-button {
+        background-color: $primary;
+        border-radius: 8px;
+        border: solid 1px $primary;
+        transition: all 0.5s ease;
+        margin-right: 20px;
+        &:hover {
+            background-color: $primary-hover;
+            border-color: $primary-hover;
+        }
+    }
 }
