--- a/src/app/main/main/main.component.scss
+++ b/src/app/main/main/main.component.scss
@@ -4,7 +4,8 @@
   margin-left: 0;
 }
 .side-bar {
-  border-right: 1px solid $primary;
+  // border-right: 1px solid $primary;
+  box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
 }
 .searchbar {
   padding-top: 30px;
