--- a/src/app/features/login/login-form/login-form.component.html
+++ b/src/app/features/login/login-form/login-form.component.html
@@ -4,7 +4,7 @@
   <div>
     <label for="exampleInputEmail1" class="form-label fw-bold fs-5">Email</label>
     <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
-           placeholder="Đăng nhập sử dụng email được cung cấp" formControlName="username">
+           placeholder="Đăng nhập sử dụng email được cung cấp" formControlName="email">
   </div>
   <div>
     <div class="d-flex justify-content-between">
