--- a/src/app/features/post-login/issue-list/update-issue/update-issue.component.html
+++ b/src/app/features/post-login/issue-list/update-issue/update-issue.component.html
@@ -1,13 +1,17 @@
 <!-- <span>breadcrumb here</span> -->
 <!-- {{ issue | json }} -->
 <h4>Cập nhật kế hoạch kiểm tra</h4>
-<br />
-<form class="row issue-content no-gutter-row" *ngIf="issue">
+<form
+  [formGroup]="issueForm"
+  class="row issue-content no-gutter-row"
+  *ngIf="issue"
+  (ngSubmit)="onSubmit()"
+>
   <p-toast></p-toast>
   <p-confirmDialog [style]="{ width: '50vw' }"></p-confirmDialog>
   <p-dialog
     header="Danh sách đoàn kiểm tra"
-    [(visible)]="popupVisible"
+    [(visible)]="popupInspectorVisible"
     [modal]="true"
     [style]="{ width: '80vw' }"
     [draggable]="false"
@@ -83,11 +87,11 @@
           </td>
           <td>
             <span class="p-column-title">Chức vụ</span>
-            {{ inspector.address.city }}
+            {{ inspector.address.city || inspector.role }}
           </td>
           <td>
             <span class="p-column-title">Đơn vị</span>
-            {{ inspector.company.name }}
+            {{ inspector.company.name || inspector.school }}
           </td>
         </tr>
       </ng-template>
@@ -105,6 +109,45 @@
       Lưu
     </button>
   </p-dialog>
+  <!-- invalid doc popup -->
+  <p-dialog
+    header="Tài liệu không có hiệu lực"
+    [modal]="true"
+    [(visible)]="popupInvalidDocVisible"
+    [style]="{ width: '80vw' }"
+    [draggable]="false"
+    [resizable]="false"
+  >
+    <p-virtualScroller
+      [value]="invalidDoc"
+      class="border-1 surface-border border-round"
+      scrollHeight="400px"
+      [itemSize]="100"
+    >
+      <ng-template pTemplate="item" let-item>
+        <div class="file-item p-3 d-flex">
+          <div
+            class="file-item-icon d-flex justify-content-center align-items-center"
+          >
+            <i class="fa-regular fa-file"></i>
+          </div>
+          <div class="file-item-content ps-3">
+            <p class="text-d">
+              {{ item.name }}<br />
+              {{ item.size }}<br />
+              {{ item.date | date : "MM/dd/yyyy" }}
+            </p>
+          </div>
+          <div class="mx-auto">
+            <p-tag class="status" [severity]="'danger'" [rounded]="true">
+              Không có hiệu lực
+            </p-tag>
+          </div>
+        </div>
+      </ng-template>
+    </p-virtualScroller>
+  </p-dialog>
+  <!-- file upload popup -->
   <p-dialog
     header="Cập nhật tài liệu"
     [(visible)]="uploadFileVisible"
@@ -129,18 +172,25 @@
       </ng-template>
     </p-fileUpload>
   </p-dialog>
+
   <div class="col-md-8">
     <div class="mb-2 issue-name">
-      <h5>Tên kế hoạch</h5>
+      <h6>Tên kế hoạch</h6>
       <input
         pInputText
         class="text-black-50 w-100"
         value="{{ issue.docName }}"
         formControlName="name"
       />
+      <span
+        *ngIf="issueForm.controls.name.errors?.['whitespace']"
+        class="p-error"
+        >Vui lòng điền tên kế hoạch</span
+      >
+      <!-- <pre>{{ issueForm.controls.name.errors | json }}</pre> -->
     </div>
     <div class="mb-2 issue-description">
-      <h5>Chi tiết</h5>
+      <h6>Chi tiết</h6>
       <textarea
         pInputTextarea
         class="text-black-50 w-100"
@@ -148,11 +198,24 @@
         rows="3"
         formControlName="description"
       ></textarea>
+      <span
+        *ngIf="issueForm.controls.description.errors?.['whitespace']"
+        class="p-error"
+        >Vui lòng điền chi tiết kế hoạch</span
+      >
     </div>
-    <div class="mb-5">
-      <h5 class="mb-3">Tài liệu công văn</h5>
+    <div class="mb-2">
+      <h5>Tài liệu công văn</h5>
+      <button
+        class="mb-2"
+        type="button"
+        pButton
+        (click)="togglePopupInvalidDoc()"
+      >
+        Xem tài liệu không có hiệu lực
+      </button>
       <ng-container *ngFor="let item of issue.file">
-        <div class="mb-2">
+        <div *ngIf="item.status" class="mb-2">
           <div class="file-item p-3 d-flex">
             <div
               class="file-item-icon d-flex justify-content-center align-items-center"
@@ -161,19 +224,14 @@
             </div>
             <div class="file-item-content ps-3">
               <p class="text-d">
-                {{ item.name }}
+                {{ item.name }}<br />
+                {{ item.size }}<br />
+                {{ item.date | date : "MM/dd/yyyy" }}
               </p>
-              {{ item.size }}
             </div>
-            <div
-              class="mx-auto d-flex justify-content-center align-items-center"
-            >
-              <p-tag
-                class="status"
-                [severity]="item.status ? 'success' : 'danger'"
-                [rounded]="true"
-              >
-                {{ item.status ? "Có hiệu lực" : "Không có hiệu lực" }}
+            <div class="mx-auto">
+              <p-tag class="status" [severity]="'success'" [rounded]="true">
+                Có hiệu lực
               </p-tag>
             </div>
 
@@ -190,7 +248,12 @@
       </ng-container>
       <!-- <button type="button" pButton>Thêm mới</button> -->
       <!-- <br /> -->
-      <button pButton>Lưu</button>
+      <button
+        pButton
+        [disabled]="issueForm.invalid || issue.inspector.length == 0"
+      >
+        Lưu
+      </button>
     </div>
   </div>
   <div class="col-md-4">
@@ -206,44 +269,56 @@
       </div>
 
       <div class="card">
-        <ng-template pTemplate="header">Header Content</ng-template>
+        <!-- <ng-template pTemplate="header">Header Content</ng-template>
         <p-virtualScroller
           [value]="issue.inspector"
           class="border-1 surface-border border-round"
           scrollHeight="540px"
           [itemSize]="120"
-        >
-          <ng-template pTemplate="item" let-item>
-            <div class="scrollview-item d-flex p-3 ms-2 h-full">
-              <div
-                class="scrollview-item-icon d-flex justify-content-center align-items-center"
-              >
-                <i class="fa fa-user-circle" aria-hidden="true"></i>
-                <!-- <span class="index">{{
+          [numToleratedItems]="5"
+        > -->
+        <div class="overflow-auto">
+          <ng-container *ngFor="let item of issue.inspector">
+            <div *ngIf="issue.inspector" class="mb-2">
+              <div class="scrollview-item d-flex p-3 ms-2 h-full">
+                <div
+                  class="scrollview-item-icon d-flex justify-content-center align-items-center"
+                >
+                  <i class="fa fa-user-circle" aria-hidden="true"></i>
+                  <!-- <span class="index">{{
                   issue.inspector.indexOf(item) + 1
                 }}</span> -->
-              </div>
-              <div class="scrollview-item-content ms-4">
-                <span class="font-weight-bold">{{ item.name }}</span>
-                <br />
-                <span
-                  >{{ item.role }}<br />
-                  {{ item.school }}
-                </span>
-              </div>
+                </div>
+                <div class="scrollview-item-content ms-4">
+                  <span class="font-weight-bold">{{ item.name }}</span>
+                  <br />
+                  <span
+                    >{{ item.role }}<br />
+                    {{ item.school }}
+                  </span>
+                </div>
 
-              <div
-                class="trash-icon ml-5 d-flex justify-content-center align-items-center"
-              >
-                <i
-                  *ngIf="isChanged"
-                  class="fa-solid fa-trash"
-                  (click)="confirmDelete(item)"
-                ></i>
+                <div
+                  class="trash-icon ml-5 d-flex justify-content-center align-items-center"
+                >
+                  <i
+                    *ngIf="isChanged"
+                    class="fa-solid fa-trash"
+                    (click)="confirmDelete(item)"
+                  ></i>
+                </div>
               </div>
             </div>
-          </ng-template>
-        </p-virtualScroller>
+          </ng-container>
+          <div
+            class="d-flex justify-content-center align-items-center"
+            *ngIf="issue.inspector.length == 0"
+          >
+            Danh sách ban kiểm tra không được để trống
+          </div>
+        </div>
+
+        <!-- </p-virtualScroller> -->
       </div>
       <div class="bottom p-2">
         <div
@@ -262,7 +337,15 @@
           </button>
           <button pButton (click)="toggleStore()">Lưu</button>
         </div>
+        <input
+          hidden
+          type="text"
+          [(value)]="issue.inspector"
+          formControlName="inspector"
+        />
+        <!-- <pre>{{issueF}}</pre> -->
       </div>
     </div>
   </div>
+  <!-- <pre>{{ issueForm.value | json }}</pre> -->
 </form>
