school initiation plan, request body update issue

--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -48,7 +48,7 @@
           </a>
         </li>
         <li class="p-2 rounded" routerLinkActive="active">
-          <a class="" [routerLink]="['/initiationplan']">
+          <a class="" [routerLink]="['/schoolinitiationplan']">
             <div>
               <i class="bi bi-clock"></i>
               &nbsp; Kế hoạch thực hiện
