--- a/src/app/features/post-login/issue-list/issue-list.component.html
+++ b/src/app/features/post-login/issue-list/issue-list.component.html
@@ -102,7 +102,7 @@
             class="action-item d-flex justify-content-center align-items-center mx-2"
           >
             <i
-              class="fa-solid fa-circle-info"
+              class="bi bi-info-circle-fill"
               (click)="navigateToDetail(issue.id)"
             ></i>
           </div>
@@ -110,7 +110,7 @@
             class="action-item d-flex justify-content-center align-items-center mx-2"
           >
             <i
-              class="fa-solid fa-pencil"
+              class="bi bi-pencil-fill"
               (click)="navigateToUpdate(issue.id)"
             ></i>
           </div>
