--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -1,4 +1,4 @@
-<div class="sidebar-content d-flex flex-column justify-content-between">
+<div class="sidebar-content d-flex flex-column justify-content-between h-100">
   <div class="sidebar-content-top">
     <div class="logo mt-2 mb-5">
       <div class="sidebar-logo">
