--- a/src/app/features/post-login/issue-list/update-issue/update-issue.component.html
+++ b/src/app/features/post-login/issue-list/update-issue/update-issue.component.html
@@ -168,7 +168,7 @@
       url="https://www.primefaces.org/cdn/api/upload.php"
       (onUpload)="onUpload($any($event), documentTypeId, documentId)"
       [multiple]="false"
-      accept="application/pdf"s
+      accept="application/pdf"
     >
     </p-fileUpload>
   </p-dialog>
@@ -220,7 +220,7 @@
             <div
               class="file-item-icon d-flex justify-content-center align-items-center"
             >
-              <i class="fa-regular fa-file"></i>
+            <i class="bi bi-file-earmark"></i>
             </div>
             <div class="file-item-content ps-3">
               <p class="text-d">
