--- a/src/app/features/post-login/issue-list/issue-detail/issue-detail.component.scss
+++ b/src/app/features/post-login/issue-list/issue-detail/issue-detail.component.scss
@@ -39,6 +39,9 @@
     border-radius: 10px;
     font-size: 16px;
     box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+    .file-item-content {
+        width: 400px;
+    }
     .file-item-icon {
         i {
             color: $primary;
