--- a/src/app/components/pagenotfound/pagenotfound.component.html
+++ b/src/app/components/pagenotfound/pagenotfound.component.html
@@ -1,6 +1,6 @@
 <div class="d-flex align-items-center flex-column min-vh-100 outer-box">
-  <p class="fw-bold fs-1 mt-3">Không có kết quả</p>
-  <img src="../../../assets/img/404-PageNotFound.svg" alt="" class="mt-3" />
+  <p class="fw-bold fs-1 mt-2">Không có kết quả</p>
+  <img src="../../../assets/img/404-PageNotFound.svg" alt="" class="mt-2 img-fluid" />
   <p class="fw-bold fs-3 mt-3">
     Nội dung tìm kiếm không tồn tại. Hãy thử tìm kiếm khác.
   </p>
