--- a/src/app/features/post-login/issue-list/issue-list.component.html
+++ b/src/app/features/post-login/issue-list/issue-list.component.html
@@ -25,8 +25,8 @@
             placeholder="Tìm kiếm"
           />
         </span>
-        <p-button (click)="navigateToCreateIssue()" class="btn-purple"
-          >Tạo mới</p-button
+        <p-button (click)="navigateToCreateIssue()" class="btn-purple">Tạo mới
+        </p-button
         >
       </div>
     </ng-template>
