--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -77,7 +77,7 @@
   <div>
     <ul>
       <li class="p-2 rounded">
-        <a class="" [routerLink]="['/logout']">
+        <a class="" (click)="logout()">
           <div>
             <i class="bi bi-box-arrow-left"></i>
             &nbsp; Đăng xuất
